-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer field
The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
/data/mci/b673a78b625a4b3a15632f024ff3485c/bazel_cache/1f0fda58881c2b7283532a6cb043a2ab/execroot/_main/src/mongo/db/query/compiler/physical_model/query_solution/query_solution.h:1425: UNINIT_CTOR 183961 Class member declaration for "nq".
/data/mci/b673a78b625a4b3a15632f024ff3485c/bazel_cache/1f0fda58881c2b7283532a6cb043a2ab/execroot/_main/src/mongo/db/query/compiler/physical_model/query_solution/query_solution.h:1401: UNINIT_CTOR 183961 Non-static class member "nq" is not initialized in this constructor nor in any functions that it calls.