SERVER-116193 SERVER-116194 SERVER-116195 Fix coverity issue with QSNs (#46094)

GitOrigin-RevId: c26c04285741bc4661e706eabd4d8c6c08e899ab