src/mongo/db/query/compiler/physical_model/query_solution/query_solution.h
@@ -1364,7 +1364,11 @@ struct SkipNode : public QuerySolutionNode {
 
 struct GeoNear2DNode : public QuerySolutionNodeWithSortSet {
     GeoNear2DNode(NamespaceString nss, IndexEntry index)
-        : nss(std::move(nss)), index(std::move(index)), addPointMeta(false), addDistMeta(false) {}
+        : nss(std::move(nss)),
+          nq(nullptr),
+          index(std::move(index)),
+          addPointMeta(false),
+          addDistMeta(false) {}
 
     ~GeoNear2DNode() override {}
 
@@ -1398,7 +1402,11 @@ struct GeoNear2DNode : public QuerySolutionNodeWithSortSet {
 
 struct GeoNear2DSphereNode : public QuerySolutionNodeWithSortSet {
     GeoNear2DSphereNode(NamespaceString nss, IndexEntry index)
-        : nss(std::move(nss)), index(std::move(index)), addPointMeta(false), addDistMeta(false) {}
+        : nss(std::move(nss)),
+          nq(nullptr),
+          index(std::move(index)),
+          addPointMeta(false),
+          addDistMeta(false) {}
 
     ~GeoNear2DSphereNode() override {}
 
@@ -1535,7 +1543,7 @@ struct DistinctNode : public QuerySolutionNodeWithSortSet {
     IndexEntry index;
     IndexBounds bounds;
 
-    const CollatorInterface* queryCollator;
+    const CollatorInterface* queryCollator = nullptr;
 
     // We are distinct-ing over the 'fieldNo'-th field of 'index.keyPattern'.
     int fieldNo{0};
